@@ -1,3 +1,8 @@
+2006-01-10  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* lib/gaupol/base/delegates/preview.py:
+	  Fixed preview to use the subprocess module.
+
 2006-01-09  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* lib/gaupol/gtk/util/config.py:
